--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "homepage": "https://github.com/Napft/SmartContract#readme",
   "devDependencies": {
     "hardhat": "^2.12.5"
+  },
+  "dependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@openzeppelin/contracts": "^4.8.0"
   }
 }
